Moving normalize to be a partial as...that's what it is. Adding grid and styles to include file by default.

--- a/_sass/i.scss
+++ b/_sass/i.scss
@@ -1,2 +1,4 @@
 // Include all partials you want compiled to i.css. You don't need to include the _ (underscore). Hooray.
 @import "normalize";
+@import "grid";
+@import "styles";
