--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -2,6 +2,7 @@
 <html lang="en"> 
 <head>
 	<meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>
     {{site.title}}
   </title>
@@ -9,4 +10,12 @@
   <meta name="description" content="{{site.descripiton}}">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="css/i.css">
+  
+  <!-- Favicons and Touch Device Icons -->
+  <link rel="shortcut icon" href="favicon.ico">
+  <!-- 57 -->
+  <link rel="apple-touch-icon" href="touch-icon-iphone-precomposed.png">
+  <link rel="apple-touch-icon" sizes="72x72"   href="touch-icon-ipad-precomposed.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone-retina-precomposed.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="touch-icon-ipad-retina-precomposed.png">
 </head>
