Including markup for facebook open graph stuff. Helpful if your site is shared on facebook.

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -18,4 +18,6 @@
   <link rel="apple-touch-icon" sizes="72x72"   href="touch-icon-ipad-precomposed.png">
   <link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone-retina-precomposed.png">
   <link rel="apple-touch-icon" sizes="144x144" href="touch-icon-ipad-retina-precomposed.png">
+
+  {% include _facebook_open_graph.html %}
 </head>
