--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>
-    {{site.title}}
+    {{site.name}}
   </title>
   <meta name="author" content="{{site.author}}">
   <meta name="description" content="{{site.descripiton}}">
