FIlling out config and fixing typo. Site now generates with zero config. More helpful for first time users.

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -7,8 +7,8 @@
     {{site.name}}
   </title>
   <meta name="author" content="{{site.author}}">
-  <meta name="description" content="{{site.descripiton}}">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="description" content="{{site.description}}">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/i.css">
   
   <!-- Favicons and Touch Device Icons -->
