--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -1,8 +1,10 @@
-// Add media queries for various widths if you'd like
-@media (min-width: ) and (max-width: ) {
+/* ==========================================================================
+   GRID
+   ========================================================================== */
 
-}
+/*
+  I use different grid systems depending on my needs, so nkd doesn't assume
+  anything here.
+*/
+   
 
-@media (min-width: ) and (max-width: ) {
-
-}
