--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -1,1 +1,8 @@
-// Your styles here.
+/* ==========================================================================
+   SITE STYLES
+   ========================================================================== */
+
+/**
+ * Add your site styles here. Break things out to additional partials if you'd like
+ * and add them in import.scss
+ */
