--- a/_sass/i.scss
+++ b/_sass/i.scss
@@ -1,4 +1,5 @@
 // Include all partials you want compiled to i.css. You don't need to include the _ (underscore). Hooray.
 @import "normalize";
+@import "queries";
 @import "grid";
 @import "styles";
