Just using normalize as a base. Also including a blank but ready to rock styles.scss.

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -6,3 +6,5 @@
  * Add your site styles here. Break things out to additional partials if you'd like
  * and add them in import.scss
  */
+
+body {padding:0 20px;}
