--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -7,4 +7,6 @@
  * and add them in import.scss
  */
 
-body {padding:0 20px;}
+body {
+  font-family: "proxima-nova", helvetica, arial, sans-serif;
+}
